# kvartirka_assignment

./: .env  .env-example  .gitignore  Procfile  dump.json  manage.py  pyproject.toml  readme.md  requirements.txt  setup.cfg
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
docs/: api_docs.json  api_docs.yaml  kvartirka_api_test.postman_collection.json
kvartirka_api_test/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
test_django/: settings.py  urls.py
